force-app/main/default/objects/Activity/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>