force-app/main/default/objects/Activity/fields/IsOwner__c.field-meta.xml
<CustomField>
    <fullName>IsOwner__c</fullName>
    <formula>IF(Owner:User.Id = $User.Id ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOwner</label>
    <type>Checkbox</type>
</CustomField>