force-app/main/default/objects/Activity/fields/Owner_Delivery_Plant__c.field-meta.xml
<CustomField>
    <fullName>Owner_Delivery_Plant__c</fullName>
    <formula>Text(Owner:User.Delivery_Plant__c)</formula>
    <label>Owner Delivery Plant</label>
    <type>Text</type>
</CustomField>